sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:11: error: ')' expected but '}' found.
    }
    ^